--- a/locales/kg.json
+++ b/locales/kg.json
@@ -1059,33 +1059,10 @@
         "child_certificate_issue_place": "🏢 Документти ким бергенин көрсөтүңүз\nМисал: ЗАГС Центрального района г. Санкт-Петербурга",
         "who_for_child": "🧑 Мамиленин даражасын көрсөтүңүз (балага ким экениңизди)"
     },
-    "change_profession_btn": "🧰 Кесип",
-"change_phone_by_organisation_btn": "📌 Кабыл алуучу тараптын телефону",
 "change_phone_by_individual_btn": "📌 Кабыл алуучу тараптын телефону",
 "change_value_phone_by_individual": "☎️ Байланыш үчүн адамдын телефон номерин киргизиңиз (болсо)",
 "change_value_phone_by_organisation": "☎️ Байланыш үчүн адамдын телефон номерин киргизиңиз (болсо)",
 
-"change_individual_data_dict_btn": "📄 Кабыл алуучу тараптын паспорту",
-"change_representative_data_dict_btn": "👥 Мыйзамдуу өкүл",
-"change_who_btn": "Туугандык даражасы",
-"change_child_cert_info_dict_btn": "🧑 Төрөлгөндүгү жөнүндө күбөлүк",
+"change_who_btn": "Туугандык даражасы"
 
-"change_value_individual_data": {
-    "full_name": "Кабыл алуучу тараптын Фамилия Аты Атасынын атын текст түрүндө жибериңиз",
-    "passport_give_date_input": "Паспорттун берилген күнүн текст түрүндө жибериңиз",
-    "passport_issue_place_input": "Паспорт ким тарабынан берилгенин текст түрүндө жибериңиз\nПример: Отделом УФМС России в Санкт-Петербурге",
-    "passport_serial_number_input": "Паспорттун сериясын жана номерин текст түрүндө жибериңиз",
-    "phone": "☎️ Кабыл алуучу тараптын телефон номерин киргизиңиз (болсо)",
-    "adress": "🏠 Кабыл алуучу тараптын катталган дарегин киргизиңиз (шаар, көчө, үй)"
-},
-"change_value_representative_data": {
-    "full_name": "👶 Баланын мыйзамдуу өкүлүнүн ФИОсун киргизиңиз",
-    "who": "Баланы ким коштоп жүргөнүн же арызды ким берерин көрсөтүңүз"
-},
-"change_value_child_cert_info": {
-    "birth_date": "📆 Төрөлгөн күндү ДД.ММ.ГГГГ форматында киргизиңиз\nПример: 14.08.1996",
-    "child_certificate_number": "📇 Төрөлгөндүгү жөнүндө күбөлүктүн номерин киргизиңиз\nПример: №123456",
-    "full_name": "👶 Баланын ФИОсу\nПример: Расулова Махлиё Азизовна",
-    "child_citizenship": "🌍 Жарандыгын киргизиңиз (кириллицада)\nПример: Узбекистан"
-}
 }
