--- a/locales/tj.json
+++ b/locales/tj.json
@@ -1051,33 +1051,10 @@
         "child_certificate_issue_place": "🏢 Зикр кунед, ки ҳуҷҷат аз тарафи кӣ содир шудааст\nМисол: ЗАГС Центрального района г. Санкт-Петербурга",
         "who_for_child": "🧑 Дараҷаи хешовандиро зикр кунед (шумо ба кӯдак кӣ мешавед)"
     },
-    "change_profession_btn": " 🧰 Касб",
-"change_phone_by_organisation_btn": "📌 Телефони ҷониби қабулкунанда (ташкилот)",
 "change_phone_by_individual_btn": "📌 Телефони ҷониби қабулкунанда",
 "change_value_phone_by_individual": "☎️ Рақами телефони шахси масъулро ворид намоед (агар мавҷуд бошад)",
 "change_value_phone_by_organisation": "☎️ Рақами телефони шахси масъулро ворид намоед (агар мавҷуд бошад)",
 
-"change_individual_data_dict_btn": "📄 Шиносномаи ҷониби қабулкунанда",
-"change_representative_data_dict_btn": "👥 Намояндаи қонунӣ",
-"change_who_btn": "Дараҷаи хешӣ",
-"change_child_cert_info_dict_btn": "🧑 Гувоҳномаи таваллуд",
+"change_who_btn": "Дараҷаи хешӣ"
 
-"change_value_individual_data": {
-    "full_name": "Ному насаби пурраи ҷониби қабулкунандаро бо матн фиристед",
-    "passport_give_date_input": "Санаи додани шиносномаро бо матн фиристед",
-    "passport_issue_place_input": "Ки шиносномаро додааст, бо матн фиристед\nНамуна: Отделом УФМС России в Санкт-Петербурге",
-    "passport_serial_number_input": "Силсила ва рақами шиносномаро бо матн фиристед",
-    "phone": "☎️ Рақами телефони ҷониби қабулкунандаро ворид намоед (агар мавҷуд бошад)",
-    "adress": "🏠 Нишонии бақайдгирии ҷониби қабулкунандаро ворид намоед (шаҳр, кӯча, хона)"
-},
-"change_value_representative_data": {
-    "full_name": "👶 Ному насаби пурраи намояндаи қонунии кӯдакро ворид намоед",
-    "who": "Зикр намоед, ки кӯдакро кӣ ҳамроҳӣ мекунад ё аризаро кӣ пешниҳод менамояд"
-},
-"change_value_child_cert_info": {
-    "birth_date": "📆 Санаи таваллудро дар формати РР.ММ.СССС ворид намоед\nНамуна: 14.08.1996",
-    "child_certificate_number": "📇 Рақами гувоҳномаи таваллудро ворид намоед\nНамуна: №123456",
-    "full_name": "👶 Ному насаби пурраи кӯдакро ворид намоед\nНамуна: Расулова Махлиё Азизовна",
-    "child_citizenship": "🌍 Шаҳрвандиро ворид намоед (бо алифбои кириллӣ)\nНамуна: Узбекистан"
-}
 }
