--- a/locales/hi.json
+++ b/locales/hi.json
@@ -27,14 +27,14 @@
     "main_menu": {
         "welcome": "👋 नमस्ते! मैं — docBot\nमैं आपको पासपोर्ट फोटो से दस्तावेज़ों को जल्दी और सही ढंग से भरने में मदद करूँगा।\nबस नीचे से आवश्यक दस्तावेज़ चुनें — और यह कुछ ही मिनटों में प्रिंट के लिए तैयार होगा",
         "documents_title": "📋 मैं किन दस्तावेज़ों के साथ काम करता हूँ:",
-        "documents": {
-            "migration_notice": "🏠 आगमन की सूचना (प्रवास पंजीकरण)",
-            "residence_notification": "📍 अस्थायी निवास परमिट के साथ निवास की अधिसूचना",
-            "work_activity": "👔 पेटेंट के तहत रोजगार की अधिसूचना",
-            "patent_extension": "📄 पेटेंट पंजीकरण नवीनीकरण",
-            "family_stay_extension": "👨‍👩‍👧‍👦 विवाह / बच्चों / पेटेंट के कारण प्रवास का विस्तार",
-            "child_stay_extension": "😊 बच्चे के रहने की अवधि का विस्तार (माँ के पेटेंट के तहत)",
-            "stamp_restoration": "📝 निवास परमिट स्टाम्प के पुन: असाइनमेंट के लिए आवेदन"
+               "documents": {
+            "migration_notice": "🏠 Уведомление о прибытии (миграционный учёт)",
+            "residence_notification": "📍 Уведомление о проживании по ВНЖ",
+            "work_activity": "👔 Уведомление о трудовой деятельности по патенту",
+            "patent_extension": "📄 Продление регистрации по патенту",
+            "family_stay_extension": "👨‍👩‍👧‍👦 Продление пребывания по браку / детям / патенту",
+            "child_stay_extension": "😊 Продление пребывания ребёнка (по патенту матери)",
+            "stamp_restoration": "📝 Заявление о перестановке штампа ВНЖ"
         }
     },
     "stamp_transfer": {
@@ -50,7 +50,7 @@
     },
     "region_start_msg_confirm": {
         "title": "📋 दस्तावेज़ में यह दर्शाया जाएगा:",
-        "example_text": "सेंट पीटर्सबर्ग, प्रिमोर्स्की जिले में OVM UMVD के प्रमुख को",
+        "example_text": "बॉस को",
         "description": "यदि आपने विभाग गलत दर्ज किया है, तो कृपया «↩️ वापस» बटन दबाएं और सही नाम दर्ज करें।",
         "confirm_button": "✅ सब कुछ सही है",
         "cancel_button": "↩️ वापस"
@@ -182,7 +182,7 @@
         "title": "📝 चलिए डेटा को मैन्युअल रूप से दर्ज करते हैं।",
         "description": "कृपया केवल सिरिलिक में ही प्रविष्ट करें।",
         "fio_kid": "👶 बच्चे का पूरा नाम",
-        "example": "उदाहरण: РАСУЛОВА МАХЛИЁ АЗИЗОВНА"
+        "example": "उदाहरण: Расулова Махлиё Азизовна"
     },
     "data_migr_card_arrival": {
         "title": "📆 रूसी संघ में प्रवेश की तिथि DD.MM.YYYY प्रारूप में दर्ज करें",
@@ -313,7 +313,7 @@
     },
     "name_org_migr_card_arrival": {
         "title": " 🏢 संगठन का नाम दर्ज करें (पूरा, सिरिलिक में)",
-        "example": " उदाहरण: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ» (или сокращённо: ООО «ФОРМАТ»)"
+        "example": "उदाहरण: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ» (или сокращённо: ООО «ФОРМАТ»)"
     },
     "inn_org_migr_card_arrival": {
         "title": "🧾 कृपया संगठन का INN दर्ज करें (यदि है)",
@@ -335,15 +335,15 @@
     },
     "fio_repr": {
         "title": "👶 बच्चे के कानूनी प्रतिनिधि का पूरा नाम दर्ज करें",
-        "example": "उदाहरण: РАСУЛОВА МАХЛИЁ АЗИЗОВНА"
+        "example": "उदाहरण: Расулова Махлиё Азизовна"
     },
     "stamp_check_datas_info": {
         "title": "जांचें, सब कुछ सही है या नहीं:",
         "full_name": "👤 नाम: ",
         "old_passport": "📄 पुराना पासपोर्ट: ",
         "new_passport": "📄 नया पासपोर्ट: ",
-        "issue_date": ", जारी किए गए ",
-        "expiry_date": " तक ",
+        "issue_date": ", выдан ",
+        "expiry_date": " сроком до ",
         "stamp_in": "📌 वीएनЖ की मुहर पुराने पासपोर्ट में है",
         "adress": "📍रूसी संघ में निवास का पता: ",
         "phone": "📞 फ़ोन: ",
@@ -369,8 +369,8 @@
         "data_birthday": "🗓 जन्म तिथि: ",
         "citizenship": "🌍 नागरिकता: ",
         "passport": " 📄 पासपोर्ट: ",
-        "issue_info": ", जारी किए गए ",
-        "issue_date": ", वैधता अवधि ",
+        "issue_info": ", выдан ",
+        "issue_date": ", срок действия ",
         "issue_passport": " FA ",
         "issue_migr_card_info": "प्रवेश",
         "issue_migr_card": " शृंखला ",
@@ -394,8 +394,8 @@
         "data_birthday": "🗓 जन्मतिथि: ",
         "citizenship": "🌍 नागरिकता: ",
         "passport": " 📄 पासपोर्ट: ",
-        "issue_info": ", जारी किए गए ",
-        "issue_date": ", वैधता अवधि ",
+        "issue_info": ", выдан ",
+        "issue_date": ", срок действия ",
         "issue_passport": " FA ",
         "issue_migr_card_info": " प्रवेश ",
         "issue_migr_card": " शृंखला ",
@@ -415,7 +415,7 @@
     },
     "cert_birth_data_succes": {
         "cert_data": "📄जन्म प्रमाण पत्र: ",
-        "issue_info": " जारी किए गए "
+        "issue_info": " выдано "
     },
     "info_about_representative": {
         "info_title": "👥 कानूनी प्रतिनिधियों के बारे में जानकारी:",
@@ -479,8 +479,8 @@
         "birth_date": "🗓 जन्मतिथि: ",
         "citizenship": "🌍 नागरिकता: ",
         "passport": "📄 पासपोर्ट: ",
-        "issue_date": ", जारी किए गए ",
-        "expiry_date": " तक ",
+        "issue_date": ", выдан ",
+        "expiry_date": " сроком до ",
         "adress": "📍 रूसी संघ में निवास का पता: ",
         "residence_reason": "📌 विस्तार का कारण: Патент",
         "patient_number": " 📄 पेटेंट श्रृंखला और संख्या: ",
@@ -552,12 +552,12 @@
         "message_2": {
             "manually": {
                 "title": "📝 आइए डेटा को मैन्युअल रूप से दर्ज करें।",
-                "description": "कृपया केवल सिरिलिक में ही प्रविष्ट करें।\n\n👶 बच्चे का पूरा नाम\nउदाहरण: РАСУЛОВА МАХЛИЁ АЗИЗОВНА"
+                "description": "कृपया केवल सिरिलिक में ही प्रविष्ट करें।\n\n👶 बच्चे का पूरा नाम\nउदाहरण: Расулова Махлиё Азизовна"
             }
         },
         "message_3": {
             "title": "👶 कृपया बताएं कि बच्चा रूसी संघ के क्षेत्र को क्यों नहीं छोड़ सकता:",
-            "description": "उदाहरण:\n— देश के लिए कोई उड़ान नहीं है\n— बच्चे की बीमारी\n— पारिवारिक स्थिति"
+            "description": "उदाहरण:\n— Нет авиарейсов в страну\n— Болезнь ребёнка\n— Обстоятельства семьи"
         }
     },
     "patent_mother_start_msg": {
@@ -612,7 +612,7 @@
     },
     "work_activity_department_user_input": {
         "title": "📋 दस्तावेज़ में निम्नलिखित का उल्लेख होगा:",
-        "title_dep": "बॉस को",
+        "title_dep": "Начальнику",
         "description": "यदि आपने विभाग गलत निर्दिष्ट किया है, तो बटन पर क्लिक करें «↩️ पीछे» और सही नाम दर्ज करें.",
         "buttons": {
             "correct_btn": "✅ यह सही है",
@@ -632,7 +632,7 @@
             "title": "📝 आइये बच्चे का विवरण भरें:",
             "description": "कृपया केवल सिरिलिक में ही प्रविष्ट करें।",
             "name_text": "👶 बच्चे का पूरा नाम",
-            "example_text": "उदाहरण: РАСУЛОВА МАХЛИЁ АЗИЗОВНА"
+            "example_text": "उदाहरण: Расулова Махлиё Азизовна"
         },
         "child_birth_date": {
             "title": "📆 कृपया अपनी जन्मतिथि DD.MM.YYYY प्रारूप में दर्ज करें",
@@ -667,8 +667,8 @@
         "birth_date": "🗓 जन्मतिथि: ",
         "citizenship": "🌍 नागरिकता: ",
         "passport": "📄 पासपोर्ट: ",
-        "issue_date": ", जारी किए गए ",
-        "issue_place": ", जारी किए गए ",
+        "issue_date": ", выдан ",
+        "issue_place": ", выданo ",
         "adress": "📍 रूसी संघ में निवास का पता: ",
         "residence_reason": "💍 विस्तार का कारण: रूसी संघ के नागरिक से विवाह",
         "spouse_fio": "👥 जीवनसाथी का पूरा नाम: ",
@@ -683,8 +683,8 @@
         "birth_date": "🗓 जन्मतिथि: ",
         "citizenship": "🌍 नागरिकता: ",
         "passport": "📄 पासपोर्ट: ",
-        "issue_date": ", जारी किए गए ",
-        "issue_place": ", जारी किए गए ",
+        "issue_date": ", выдан ",
+        "issue_place": ", выданo ",
         "adress": "📍 रूसी संघ में निवास का पता: ",
         "residence_reason": " 👶 विस्तार का कारण: बच्चे की उपस्थिति — \nरूसी संघ का नागरिक",
         "child_fio": "👥 बच्चे का पूरा नाम: ",
@@ -727,7 +727,7 @@
         },
         "wa_polis_date": {
             "title": "📅 कृपया ДМС पॉलिसी की वैधता अवधि दर्ज करें",
-            "description": "आरंभ और समाप्ति तिथियां इस प्रारूप में दर्ज करें:  15.06.2025 से 14.06.2026 तक"
+            "description": "आरंभ और समाप्ति तिथियां इस प्रारूप में दर्ज करें: с 15.06.2025 по 14.06.2026"
         },
         "edit_wa_data": {
             "title": "📋 पुष्टि:",
@@ -814,7 +814,7 @@
         },
         "message_1": {
             "title": "प्रस्थान अवधि निर्दिष्ट करें (प्रत्येक अवधि अलग से):",
-            "example_text": "उदाहरण:  С 12.01.2024 по 18.02.2024"
+            "example_text": "उदाहरण: С 12.01.2024 по 18.02.2024"
         },
         "message_2": {
             "title": "🌍 कृपया प्रस्थान का देश बताएँ:",
@@ -865,10 +865,10 @@
         "birth_date": "🗓 जन्मतिथि: ",
         "citizenship": "🌍 नागरिकता: ",
         "passport": "📄 पासपोर्ट: ",
-        "passport_issue": ", जारी किए गए ",
-        "expiry_date": " वैधता अवधि: ",
+        "passport_issue": ", выдан ",
+        "expiry_date": " cрок действия ",
         "residence_permit_number": "📄 ВНЖ: №",
-        "residence_permit_issue": ", जारी किए गए ",
+        "residence_permit_issue": ", выдан  ",
         "comma_separator": ", ",
         "address": "📌 रूसी संघ में निवास का पता: ",
         "travel_periods": "🧳 प्रस्थान अवधि: ",
@@ -1069,7 +1069,7 @@
     "change_value_child_cert_info": {
         "birth_date": "📆 कृपया अपनी जन्मतिथि DD.MM.YYYY प्रारूप में दर्ज करें\nउदाहरण: 14.08.1996",
         "child_certificate_number": "📇 कृपया अपना जन्म प्रमाण पत्र संख्या प्रदान करें।\nउदाहरण: №123456",
-        "full_name": "👶 बच्चे का पूरा नाम\nउदाहरण: РАСУЛОВА МАХЛИЁ АЗИЗОВНА",
+        "full_name": "👶 बच्चे का पूरा नाम\nउदाहरण: Расулова Махлиё Азизовна",
         "child_citizenship": "🌍 कृपया अपनी नागरिकता बताएं (सिरिलिक में)\nउदाहरण: Узбекистан"
     }
    
