--- a/locales/hi.json
+++ b/locales/hi.json
@@ -313,7 +313,7 @@
     },
     "name_org_migr_card_arrival": {
         "title": " 🏢 संगठन का नाम दर्ज करें (पूरा, सिरिलिक में)",
-        "example": "उदाहरण: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ» (или сокращённо: ООО «ФОРМАТ»)"
+        "example": " उदाहरण: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ» (или сокращённо: ООО «ФОРМАТ»)"
     },
     "inn_org_migr_card_arrival": {
         "title": "🧾 कृपया संगठन का INN दर्ज करें (यदि है)",
@@ -608,7 +608,7 @@
     },
     "work_activity_department_name": {
         "title": "कृपया उस विभाग का पूरा नाम दर्ज करें जिसके लिए आप आवेदन कर रहे हैं (आमतौर पर यह आपके पिछले पंजीकरण या माइग्रेशन दस्तावेज़ में दर्शाया गया होता है)",
-        "example_text": "Наउदाहरण: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
+        "example_text": "उदाहरण: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
     },
     "work_activity_department_user_input": {
         "title": "📋 दस्तावेज़ में निम्नलिखित का उल्लेख होगा:",
@@ -814,7 +814,7 @@
         },
         "message_1": {
             "title": "प्रस्थान अवधि निर्दिष्ट करें (प्रत्येक अवधि अलग से):",
-            "example_text": "उदाहरण: С 12.01.2024 по 18.02.2024"
+            "example_text": "उदाहरण:  С 12.01.2024 по 18.02.2024"
         },
         "message_2": {
             "title": "🌍 कृपया प्रस्थान का देश बताएँ:",
@@ -925,7 +925,7 @@
     "change_phone_number_btn": " 📞  फ़ोन नंबर",
     "change_mvd_adress_btn": "🏢 आवेदन दाखिल करना",
     "return_from_change_data": "↩️ पीछे",
-    "change_full_name_btn": "👤 ФИО",
+    "change_full_name_btn": "👤 FIO",
     "change_birth_date_btn": "📅  जन्मतिथि",
     "change_citizenship_btn": "🌍 सिटिज़नशिप",
     "change_passport_serial_number_btn": "🔢 शृंखला और संख्या",
@@ -934,7 +934,7 @@
     "change_passport_issue_place_btn": "🏢 जारीकर्ता",
     "change_value_live_adress": "🏠 वह पता दर्ज करें जहाँ आप रूसी संघ में रहते हैं\nप्रारूप: शहर, सड़क, घर, इमारत, अपार्टमेंट",
     "change_value_phone_number": "☎️ कृपया अपना वर्तमान फ़ोन नंबर दर्ज करें\nउदाहरण: 79809008090",
-    "change_value_mvd_adress": "कृपया उस विभाग का पूरा नाम दर्ज करें जिसके लिए आप आवेदन कर रहे हैं (आमतौर पर यह आपके पिछले पंजीकरण या माइग्रेशन दस्तावेज़ में दर्शाया गया होता है)\n\nНаउदाहरण: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
+   "change_value_mvd_adress": "कृपया उस विभाग का पूरा नाम दर्ज करें जिसके लिए आप आवेदन कर रहे हैं (आमतौर पर यह आपके पिछले पंजीकरण या माइग्रेशन दस्तावेज़ में दर्शाया गया होता है)\n\nउदाहरण: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
     "change_value_passport_data": {
         "full_name": "👤 अपना पूरा नाम दर्ज करें (केवल सिरिलिक में)\nउदाहरण: Абдуллаев Жахонгир Нодирович",
         "birth_date": "📅 जन्मदिन: ",
